fixed slide show and some small layout bugs.

--- a/frontEnd/assets/styles/addHouse.css
+++ b/frontEnd/assets/styles/addHouse.css
@@ -10,10 +10,6 @@
     text-align: right;
 }
 
-.container-fluid .main-content .row .deal-type span.space {
-    margin: 0px 35px;
-}
-
 .container-fluid .main-content div.labels {
     color: lightgrey;
     font-size: 14px;
