--- a/frontEnd/assets/styles/core.css
+++ b/frontEnd/assets/styles/core.css
@@ -33,6 +33,10 @@ body {
     background-color: #514992;
 }
 
+span.space {
+    margin: 0px 35px;
+}
+
 /*a {*/
     /*box-shadow:0px 2px 80px rgba(0, 0, 0, 0.1);*/
 /*}*/
