--- a/frontEnd/assets/styles/index.css
+++ b/frontEnd/assets/styles/index.css
@@ -1,58 +1,9 @@
-.header-container div.row {
-    padding-top: 20px;
-}
-
-.container-fluid div.slider {
-    position: relative;
-    z-index: -1;
-}
-
-.container-fluid div.slider .slide1,
-.container-fluid div.slider .slide2,
-.container-fluid div.slider .slide3,
-.container-fluid div.slider .slide4 {
-    position: fixed;
-    width: 100%;
-    height: 90%;
-}
-
-.container-fluid div.slider .slide1 {
-    /*background-attachment: scroll !important;*/
-    background: url(../images/banner/1.jpg) no-repeat center;
-    background-size: cover;
-    animation:fade 10s infinite;
-    -webkit-animation:fade 10s infinite;
-
-}
-
-.container-fluid div.slider .slide2 {
-    /*background-attachment: scroll !important;*/
-    background: url(../images/banner/2.jpg) no-repeat center;
-    background-size: cover;
-    animation:fade2 10s infinite;
-    -webkit-animation:fade2 10s infinite;
-}
-
-.container-fluid div.slider .slide3 {
-    /*background-attachment: scroll !important;*/
-    background: url(../images/banner/3.jpg) no-repeat center;
-    background-size: cover;
-    animation:fade3 10s infinite;
-    -webkit-animation:fade3 10s infinite;
-}
-
-.container-fluid div.slider .slide4 {
-    /*background-attachment: scroll !important;*/
-    background: url(../images/banner/4.jpg) no-repeat center;
-    background-size: cover;
-    height: 200%;
-    transform: translateY(-55%);
-    animation:fade4 10s infinite;
-    -webkit-animation:fade4 10s infinite;
-}
-
 .header-container {
     margin-bottom: 50px;
+}
+
+.header-container div.row {
+    padding-top: 20px;
 }
 
 .header-container .logo > img {
@@ -196,7 +147,7 @@
 }
 
 .container-fluid div.why {
-    margin-bottom: 150px;
+    margin-bottom: 80px;
     direction: rtl;
     text-align: right;
     position: relative;
@@ -211,12 +162,12 @@
 }
 
 .container-fluid div.why div.items {
-    padding: 20px;
+    padding: 10px;
 }
 
 .container-fluid div.why div.items div.item {
     padding-bottom: 10px;
-    font-size: 20px;
+    font-size: 18px;
 }
 
 .container-fluid div.why div.items div.item > i {
@@ -228,6 +179,38 @@
     margin-bottom: 20px;
     font-size: 30px;
     font-weight: 600;
+}
+
+.container-fluid .slide-show {
+    position: relative;
+    z-index: -1;
+}
+
+.container-fluid .slide-show > div {
+    background-size: cover !important;
+    position: absolute;
+    width: 100%;
+    height: 700px !important;
+}
+
+.container-fluid .slide-show .slide1 {
+    background: url(../images/banner/1.jpg) no-repeat center scroll;
+    animation:fade 40s infinite;
+}
+
+.container-fluid .slide-show .slide2 {
+    background: url(../images/banner/2.jpg) no-repeat center scroll;
+    animation:fade2 40s infinite;
+}
+
+.container-fluid .slide-show .slide3 {
+    background: url(../images/banner/3.jpg) no-repeat center scroll;
+    animation:fade3 40s infinite;
+}
+
+.container-fluid .slide-show .slide4 {
+    background: url(../images/banner/4.jpg) no-repeat center bottom scroll;
+    animation:fade4 40s infinite;
 }
 
 @keyframes fade
@@ -263,38 +246,13 @@
     100% { opacity: 0}
 }
 
-@-webkit-keyframes fade {
-    0%   {opacity:1}
-    25% { opacity: 0}
-    50% { opacity: 0 }
-    75% { opacity: 0 }
-    100% { opacity: 1}
-}
-@-webkit-keyframes fade2 {
-    0%   {opacity:0}
-    25% { opacity: 1}
-    50% { opacity: 0 }
-    75% { opacity: 0 }
-    100% { opacity: 0}
-}
-@-webkit-keyframes fade3 {
-    0%   {opacity:0}
-    25% { opacity: 0}
-    50% { opacity: 1 }
-    75% { opacity: 0 }
-    100% { opacity: 0}
-}
-@-webkit-keyframes fade4 {
-    0%   {opacity: 0}
-    25% { opacity: 0}
-    50% { opacity: 0 }
-    75% { opacity: 1 }
-    100% { opacity: 0}
-}
-
 @media screen and (max-width: 1199px) {
     .container-fluid div.advantage-container div.item {
         padding-right: 0;
         padding-left: 0;
+    }
+
+    .container-fluid .slide-show > div {
+        height: 850px !important;
     }
 }
